WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224001
ServiceWorkerContextData should not be saved both on ServiceWorkerThread & ServiceWorkerGlobalScope
https://bugs.webkit.org/show_bug.cgi?id=224001
Summary
ServiceWorkerContextData should not be saved both on ServiceWorkerThread & Se...
Chris Dumez
Reported
2021-03-31 09:09:13 PDT
ServiceWorkerContextData should not be saved both on ServiceWorkerThread & ServiceWorkerGlobalScope. ServiceWorkerContextData contains script sources and may use a large amount of memory.
Attachments
Patch
(22.38 KB, patch)
2021-03-31 09:13 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-03-31 09:13:27 PDT
Created
attachment 424775
[details]
Patch
Geoffrey Garen
Comment 2
2021-03-31 09:34:39 PDT
Comment on
attachment 424775
[details]
Patch r=me
EWS
Comment 3
2021-03-31 10:15:48 PDT
Committed
r275288
: <
https://commits.webkit.org/r275288
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424775
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-03-31 10:16:15 PDT
<
rdar://problem/76058632
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug